fix icon and align text fonctionnement

--- a/css/style.css
+++ b/css/style.css
@@ -393,8 +393,7 @@ p {
   left: -10px;
 }
 .step i {
-  position: absolute;
-  left: 30px;
+  margin: 0 30px;
 }
 .step p:last-child {
   font-weight: 500;
@@ -411,11 +410,10 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  justify-content: left;
 }
 .step__card:hover {
   box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.47);
-}
-.step__card:hover {
   background-color: rgba(147, 86, 220, 0.1);
 }
 .step__card:hover i {
